--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
-    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.0",
     "use-immer": "^0.10.0"
   },
