--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5174 --open $BROWSER",
+    "wsl": "vite --port 5174",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -16,7 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.7",
-    "axios": "^1.7.3",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
